[package]
name = "emoji-mart-app"
version = "0.1.5"
description = "Emoji picker for desktop. Built with the Emoji Mart web component, and packaged as a tauri app."
authors = ["Vincent Emonet"]
license = ""
repository = ""
edition = "2021"
# rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "clipboard-read-text", "cli", "window-set-always-on-top", "window-center", "window-show", "window-hide", "window-close", "clipboard-write-text"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# enigo = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [profile.release]
# panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# strip = true # Remove debug symbols
