[package]
name = "emoji-mart-app"
version = "0.2.4"
description = "Emoji picker for desktop. Built with the Emoji Mart web component, and packaged as a tauri app."
authors = ["Vincent Emonet"]
license = ""
repository = ""
edition = "2021"
# rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-os = "2.0.0-beta.2"
tauri-plugin-clipboard-manager = "2.0.0-beta.2"
# enigo = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-beta.2"

# [profile.release]
# panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# strip = true # Remove debug symbols
