[package]
name = "emoji-mart-app"
version = "0.3.0"
description = "Emoji picker for desktop. Built with the Emoji Mart web component, and packaged as a tauri app."
authors = ["Vincent Emonet"]
license = ""
repository = ""
edition = "2021"
# rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For mobile https://v2.tauri.app/start/migrate/from-tauri-1/ but this is bugged of course and create an error in main.rs
# [lib]
# name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-os = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
# tauri-plugin-clipboard-manager = "2.1.0-beta.0" # Build fails
# enigo = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.1"
tauri-plugin-single-instance = "2.0.1"

# [profile.release]
# panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# strip = true # Remove debug symbols
